fix(css): reduce social buttons on mobile

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -379,6 +379,11 @@ body.resume br {
   main.page > h1 {
     font-size: 1.75em;
   }
+
+  main.one-man-show > ul > li {
+    margin: auto 7.5px;
+    font-size: 0.8em;
+  }
 }
 
 @media (width >=768px) {
